* 2007-07-18 - thorben.betten@open-xchange.com

 - New design for custom IMAP commands
 - Moved imap-related packages to new package(s)

* 2007-07-17 - francisco.laguna@open-xchange.com

 - Fix for bug #8478: Changed LogLevel.

* 2007-07-13 - tobias.prinz@open-xchange.com

 - Bugfix #7470: Fixed and tested after all.
 - Bugfix #8411: Applied Thorben's patch and wrote test for it.

* 2007-07-13 - francisco.laguna@open-xchange.com

 - Fix for bug #8392: Changed webdav servlet to expect ENCODED URIs. To ensure
   that they remain encoded the following option has to be set in the Apache configuration:
   JkOptions +ForwardURICompatUnparsed
   
############## PAY ATTENTION TO ME ! ################
 - CONFIG change: Option in apache configuration must be set:
JkOptions +ForwardURICompatUnparsed
#####################################################
   

* 2007-07-13 - thorben.betten@open-xchange.com

 - Slightly fastened AJP processing
 - Added file name extraction method to UploadEvent
 - Avoiding duplicate VCard attachment when saving draft message

* 2007-07-12 - tobias.prinz@open-xchange.com

 - Bugfix #7732: An RRULE's COUNT property is now set as occurrence value
   for a CalendarObject.

* 2007-07-12 - thorben.betten@open-xchange.com

 - Setting message's 'Organization' header surrounded by a try-catch clause
   in which a Throwable is caught thus sending a message is not aborted
   through a possible error while reading context admin's organization field
 - New method in USerConfiguration to detect if user is allowed to see portal
   page in GUI

* 2007-07-11 - thorben.betten@open-xchange.com

 - Added support for differing IMAP server's ACL handling plus
   auto-detection of IMAP server
 - Added possibility to map more machines to one host name when detecting
   User2IMAP impl
 - Fixed problem if IMAPProperties could not be properly initialized during
   session creation

* 2007-07-10 - tobias.prinz@open-xchange.com
